Put more useful logging on the console